# sick

./: Cargo.toml
benches/: benchmark.rs
examples/: own_message.rs  ref_message.rs  spawn_service.rs
src/: decoder.rs  encoder.rs  lib.rs
src/decoder/: stream.rs
