[package]
name = "sick"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["io-util", "macros"] }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "sync",
    "rt",
    "rt-multi-thread",
    "net",
] }

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "ref_message"
