[package]
name = "sick"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["io-util", "macros"] }

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync"
] }

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "ref_message"
