[package]
name = "sick"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["io-util", "macros"] }

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
] }

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "ref_message"

[[example]]
name = "own_message"

[[example]]
name = "spawn_service"
